--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       </div>
     </div>
     <div class="parallax"><img src="background1.bmp" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
