--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
         
+      <a id="logo-container" href="#" class="brand-logo"><img src="ADAM%20logo.png" width="180" height="60"/></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">About</a></li>
       </ul>
@@ -40,6 +41,7 @@
           <h5 class="header col s12 light">A University of Alberta Lab</h5>
         </div>
         <div class="row center">
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Print</a>
         </div>
         <br><br>
 
