--- a/About/index.html
+++ b/About/index.html
@@ -18,11 +18,11 @@
 
         <!--LOGO try to link the logo to adamlab.ca-->
         <div class="nav-wrapper">
-            <a id="logo-container" class="brand-logo" href="http://adamlab.ca/"/>
+            <a id="logo-container" class="left hide-on-med-and-down" href="http://adamlab.ca/"/>
                  <img src="ADAM%20logo.png" width="180" height="60"/>
             </a>
           
-<!--          <a id="top_title" href="#!" class="brand-logo center">ABOUT</a>-->
+          <a id="top_title" href="#!" class="brand-logo center">ABOUT</a>
         
         <!--HEADINGS-->
             <ul class="right hide-on-med-and-down">
